# nomnomus

./: .gitignore  LICENCE  README.md  dev.local.NutrientTracker.desktop  pyproject.toml  run.sh
data/: dev.local.NomNomus.desktop  dev.local.NutrientTracker.desktop
debian/: changelog  control  copyright  nomnomus-launcher  nomnomus.1  nutrients-launcher  nutrients.1  rules
nutrients/: app.py  barcodes.py  dialogs.py  icons.py  models.py  overview.py  store.py  styles.py  widgets.py  window.py
src/: main.py
src/nomnomus/: __init__.py  analytics.py  app.py  barcodes.py  dialogs.py  edit_food.py  overview.py  store.py  window.py
src/nutrients/: __init__.py  icons.py
tests/: test_analytics.py  test_barcodes.py  test_store.py
